// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package featurestoreloadtestframework.lib;

message Requests {
        repeated RequestsPerFeaturestore requests_per_featurestore = 1;
}

message RequestsPerFeaturestore {
        optional string featurestore_id = 1;
        repeated Request requests = 2;
}

message Request {
        oneof request {
                StreamingReadFeatureValuesRequest streaming_read_feature_values_request = 1;
                ReadFeatureValuesRequest read_feature_values_request = 2;
        }
}

// see https://cloud.google.com/vertex-ai/docs/featurestore/serving-online#serve_values_from_a_single_entity
message StreamingReadFeatureValuesRequest {
        optional string entity_type = 1;
        repeated string entity_ids = 2;
        optional FeatureSelector feature_selector = 3;
}

// see https://cloud.google.com/vertex-ai/docs/featurestore/serving-online#serve_values_from_multiple_entities
message ReadFeatureValuesRequest {
        optional string entity_type = 1;
        optional string entity_id = 2;
        optional FeatureSelector feature_selector = 3;
}

message FeatureSelector {
        optional IdMatcher id_matcher = 1;
}

message IdMatcher {
        repeated string ids = 1;
}
